phase one of refactor
Engine: 80%
Layout: 50%
User: 10%

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
         <link rel="stylesheet" href="css/text.css" />
         <link rel="stylesheet" href="css/960.css" />
         <link rel="stylesheet" href="css/app.css" />
-
+<script> var Game = {}; </script>
         <script data-main="js/main" src="js/lib/require.js"></script>
     </head>
     <body>
         <div class="container_16" id="gameboard">
+            <nav id="viewNav"></nav>
+            <div id="viewSlider"></div>
             <div id="log" class="grid_4 panel">
-                <h2>Log</h2>
+                <h2>Log<div class="close">X</div></h2>
                 <span class="inner"></span>
             </div>
         </div>
