--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!doctype html>
-    <html>
+<html>
     <head>
         <link rel="stylesheet" href="css/reset.css" />
         <link rel="stylesheet" href="css/text.css" />
         <link rel="stylesheet" href="css/960.css" />
         <link rel="stylesheet" href="css/app.css" />
-<script> var Game = {}; </script>
         <script data-main="js/main" src="js/lib/require.js"></script>
     </head>
     <body>
+        <!-- <div class="close">X</div> -->
         <div class="container_16" id="gameboard">
-            <nav id="viewNav"></nav>
-            <div id="viewSlider"></div>
             <div id="log" class="grid_4 panel">
-                <h2>Log<div class="close">X</div></h2>
+                <h2>Log</h2>
                 <span class="inner"></span>
+            </div>
+            <div id="other" class="grid_10 panel">
+                <nav id="viewNav"></nav>
+                <div id="viewSlider"></div>
             </div>
         </div>
     </body>
+</html>
