--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="js/app/Layout.js"></script>
         <script src="js/app/Rooms.js"></script>
         <script src="js/app/User.js"></script>
+        <script src="js/app/Events.js"></script>
     </head>
     <body>
         <!-- <div class="close">X</div> -->
