--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
         <script src="js/app/Rooms.js"></script>
         <script src="js/app/User.js"></script>
         <script src="js/app/Events.js"></script>
+        <script src="js/app/Monsters.js"></script>
     </head>
-    <body>
+    <body class="">
         <!-- <div class="close">X</div> -->
         <div class="container_16" id="gameboard">
-            <div id="log" class="grid_4 panel">
-                <h2>Log</h2>
-                <span class="inner"></span>
+            <div id="terminal" class="grid_16 panel">
+                <h2></h2>
+                <span class="desc"></span>
             </div>
-            <div id="other" class="grid_10 panel">
+            <div id="other" class="grid_16 panel">
                 <nav id="viewNav"></nav>
                 <div id="viewSlider"></div>
             </div>
